feat: group schedule list by publication
